# bauhaus

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  config_fast.yaml  config_opflow.yaml  docker_run.sh  docker_run_mac.sh  results.txt  workspace.code-workspace
app/: Cargo.toml
app/src/: load_plugin.rs  main.rs
core/: Cargo.toml
core/src/: align.rs  base.rs  darvismsg.rs  lib.rs  orb.rs  vis.rs
darvis/: 2q  Cargo.toml  bla.txt  bla2.txt  bla3.txt  build_output_debug.txt  command_to_run  config-trackingfull.yaml  config.yaml  config_fast.yaml  config_flow.yaml  debug-valgrind.txt  log.txt  log0.txt  log1.txt  logger1.txt  logger2.txt  lto_build_command  lto_path  old_config_yaml  orbslam_config.yaml  path_config.sh  prep_script.sh  rust-toolchain  system_config.yaml  valgrind_log_18.txt  valgrind_log_19.txt  valgrind_log_20.txt  valgrind_log_21.txt  valgrind_log_22.txt  valgrind_log_23.txt  valgrind_script.sh
darvis/Valgrind_Logs/: valgrind_log.txt  valgrind_log_16.txt  valgrind_log_17.txt  valgrind_log_6.txt  valgrind_log_two.txt
darvis/config_datasets/: EUROC-0.yaml  EUROC.yaml  KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml  TUM-1.yaml  TUM-2.yaml  TUM-VI.yaml
darvis/config_systems/: config_flow.yaml  gtsam_config.yaml  orbslam-kitti.yaml  orbslam_config.yaml  system_config.yaml  tracking-full.yaml
darvis/example_configs/: orbslam-kitti.yaml  tracking-full.yaml
darvis/results/: flamegraph.html  out.mcap
darvis/results_5/: camera_trajectory.txt  keyframe_trajectory.txt
darvis/results_copy/: #output_optimized_pose_final.log#  output.log~  output_imu_pose.log~  output_imu_pose_final.txt  output_imu_pose_final.txt~  output_imu_pose_timestamp.txt~  output_imu_pose_translation.txt  output_imu_pose_translation.txt~  output_optimized_pose_final.log~  output_optimized_pose_timestamp.log~  output_optimized_pose_translation.log~
darvis/src/: basic_config.rs  initialize_system.rs  main.rs  registered_actors.rs  registered_modules.rs  spawn.rs
darvis/src/actors/: #tracking_backend.rs#  #tracking_backend_gtsam.rs#  fast.rs  frameloader.rs  local_mapping.rs  local_mapping_gtsam.rs  loop_closing.rs  loop_closing2.rs  loop_closing3.rs  map_actor.rs  messages.rs  mod.rs  optical_flow_orig.rs  shutdown.rs  tracking_backend.rs  tracking_backend_gtsam.rs  tracking_backend_kimera.rs  tracking_frontend.rs  tracking_frontend_gtsam.rs  tracking_full.rs  tracking_gtsam.rs  tracking_gtsam_old.rs  tracking_optical_flow.rs  vis.rs  visualizer.rs
darvis/src/core/: actor.rs  config.rs  lib.rs  maplock.rs  matrix.rs  module.rs  read_only_lock.rs  sensor.rs  system.rs
darvis/src/dvcore/: actor.rs  base.rs  config.rs  global_params.rs  lib.rs  lockwrap.rs  maplock.rs  matrix.rs  plugin_functions.rs  sensor.rs  vis_schemas.rs
darvis/src/dvmap/: bow.rs  features.rs  frame.rs  keyframe.rs  keyframe_database.rs  keypoints.rs  map.rs  map_actor.rs  mappoint.rs  misc.rs  mod.rs  newkeypoints.rs  observations.rs  pose.rs  sensor.rs
darvis/src/map/: bow.rs  features.rs  frame.rs  keyframe.rs  keyframe_database.rs  keyframe_database2.rs  map.rs  mappoint.rs  mod.rs  pose.rs  read_only_lock.rs
darvis/src/modules/: #orbslam_matcher.rs#  bow.rs  camera.rs  geometric_tools.rs  global_bundle_adjustment.rs  good_features_to_track.rs  image.rs  imu.rs  keyframe_database2.rs  keyframe_database3.rs  local_bundle_adjustment.rs  loop_detection.rs  map_initialization.rs  mod.rs  module.rs  module_definitions.rs  opencv_extractor.rs  optimizer.rs  orbextractor.rs  orbmatcher.rs  orbslam3_loop_detection.rs  orbslam_extractor.rs  orbslam_matcher.rs  relocalization.rs  sim3solver.rs  twoviewreconstruction.rs
darvis/src/tests/: imu_tests.rs  imu_tests_old.rs  loopclosing_tests.rs  mod.rs  sim3solver_tests.rs  tools_tests.rs  vision_tests.rs
darvis/valgrind_logs/: valgrind_log_10.txt  valgrind_log_11.txt  valgrind_log_12.txt  valgrind_log_13.txt  valgrind_log_14.txt  valgrind_log_15.txt  valgrind_log_3.txt  valgrind_log_7.txt  valgrind_log_8.txt  valgrind_log_9.txt  valgrind_log_file_4.txt
docker/: Dockerfile  docker_run_mac.sh
foxglove/: Cargo.toml  README.md  build.rs  foxglovelayout.json
foxglove/cpp/: CMakeLists.txt  JSONWriter.cc  JSONWriter.h
foxglove/examples/: json.rs  straight_trajectory.rs
foxglove/foxglove/: MapInfo.proto
foxglove/src/: lib.rs
g2o/: Cargo.toml  build.rs  log1.txt
g2o/g2o/: CMakeLists.txt  Makefile  cmake_install.cmake
g2o/g2o/Sophus/: CMakeLists.txt
g2o/g2o/g2o/core/: block_solver.hpp  factory.cpp  factory.h  hyper_graph.cpp  hyper_graph.h  optimizable_graph.cpp  optimizable_graph.h  optimization_algorithm_gauss_newton.cpp  optimization_algorithm_levenberg.cpp  robust_kernel_impl.cpp  sparse_optimizer.cpp  sparse_optimizer.h
g2o/g2o/g2o/orbslam_types/: Converter.h  GeometricCamera.h  Pinhole.cc  Pinhole.h
g2o/g2o/g2o/rust/: rust_helper.cpp  rust_helper.h
g2o/g2o/g2o/solvers/: linear_solver_dense.h
g2o/g2o/g2o/stuff/: misc.h
g2o/g2o/g2o/types/: G2oTypes.cc  G2oTypes.h  Garbage.h  ImuTypes.cc  ImuTypes.h  se3quat.h  sim3.h  types_seven_dof_expmap.cpp  types_seven_dof_expmap.h  types_six_dof_expmap.cpp  types_six_dof_expmap.h
g2o/src/: lib.rs
orbslam-bindings/: .gitignore  BUILD  Cargo.toml  build.rs
orbslam-bindings/examples/: dbow.rs  keypoints.rs  matcher.rs
orbslam-bindings/orb_slam3/: CMakeLists.txt
orbslam-bindings/orb_slam3/DBoW2/: CMakeLists.txt
orbslam-bindings/orb_slam3/DBoW2/DBoW2/: BowVector.cpp  BowVector.h  FeatureVector.cpp  FeatureVector.h  ORBVocabulary.cpp  ORBVocabulary.h  TemplatedVocabulary.h
orbslam-bindings/orb_slam3/DBoW2/DUtils/: Random.cpp  Random.h
orbslam-bindings/orb_slam3/Sophus/: CMakeLists.txt
orbslam-bindings/orb_slam3/src/: #ORBextractor.cc#  CVConvert.cc  CVConvert.h  Converter.h  DVOS3Mat.h  Extra.cc  Extra.h  ORBMatcherBridge.cc  ORBMatcherBridge.h  ORBextractor.cc  ORBextractor.h  ORBmatcher.cc  ORBmatcher.h  TwoViewReconstruction.cc  TwoViewReconstruction.h
orbslam-bindings/src/: lib.rs  main.rs
plugins/: Cargo.toml
plugins/src/: align.rs  lib.rs  orb_extract.rs  vis.rs
(+166 files in other folders)
