[package]
name = "darvis"
version = "0.1.0"
authors = ["TJ Chase <tbchase@buffalo.edu>"]
edition = "2018"

[dependencies]
opencv = "0.53"
abow = {version = "*", default-features = false, features = ["bincode"]}
nalgebra = {version = "*", features = ["serde-serialize"]}
glob = "*"
serde = "*"
axiom = "*"
log = "*"
env_logger = "*"
yaml-rust = "0.4"

dlopen = "0.1"
dlopen_derive = "0.1.3"
libc = "0.2.79"
const-cstr = "0.1"
lazy_static = "0.1.15"

[lib]
name = "darvis"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "darvis"
path = "src/main.rs"

