[package]
name = "darvis"
version = "0.1.0"
authors = ["TJ Chase <tbchase@buffalo.edu>"]
edition = "2018"


[[bin]]
name = "bindarvis"
path = "src/main.rs"

[lib]
name = "darvis"
path = "src/darvis/lib.rs"


[dependencies]
opencv = "0.53"
abow = {version = "*", default-features = false, features = ["bincode"]}
chrono = "0.4"
nalgebra = {version = "*", features = ["serde-serialize"]}
glob = "*"
serde = "*"
axiom = "*"
log = "*"
env_logger = "*"
yaml-rust = "0.4"
lazy_static = "*"
parking_lot = "0.11"
