[package]
name = "darvis"
version = "0.1.0"
authors = ["TJ Chase <tbchase@buffalo.edu>"]
edition = "2018"


[[bin]]
name = "bindarvis"
path = "src/main.rs"

[lib]
name = "darvis"
path = "src/darvis/lib.rs"


[dependencies]
opencv = "0.63.0"
nalgebra = {version = "*", features = ["serde-serialize"]}
cv-convert = {version = '0.19.0', features = ['opencv_0-63','nalgebra_0-31']}
abow = {version = "*", default-features = false, features = ["bincode"]}
chrono = { version = "0.4", features = ["serde"] }
glob = "*"
serde = "*"
axiom = "*"
log = "*"
env_logger = "*"
yaml-rust = "0.4"
lazy_static = "*"
parking_lot = "0.11"
rand = "0.7.3"
# g2orust = { git = "https://github.com/ssemenova/g2o-bindings.git" }
g2orust = { path = "../g2o-bindings/g2orust" }
cxx = "1.0"
array2d = "*"
num-traits = "0.2"
simba = "*"