[package]
name = "darvis"
version = "0.1.0"
authors = ["Sofiya Semenova <sofiyase@buffalo.edu>", "Pranay Meshram <pranaywa@buffalo.edu>", "TJ Chase <tbchase@buffalo.edu>"]
edition = "2021"


[[bin]]
name = "bindarvis"
path = "src/main.rs"

[lib]
name = "dvcore"
path = "src/dvcore/lib.rs"

[profile.release]
debug = 1

[rust]
debuginfo-level = 1

[env]
IDL_PACKAGE_FILTER = { value = "std_msgs;r2r_minimal_node_msgs" }

[dependencies]
g2o = { path = "../g2o" }
dvos3binding = { path = "../orbslam-bindings" }
foxglove = { path = "../foxglove" }
once_cell = "*"
chrono = { version = "*", features = ["serde"] }
rand = "*"
linked-hash-map = "*"
flame = "*"
ctrlc = "*"
downcast-rs = "*"
prost-types = "*"
prost = "*"

opencv = "0.84.5"
nalgebra = {version = "0.32.3", features = ["serde-serialize"]}
cv-convert = {version = '0.25.0', default_features = false, features = ['opencv_0-84','nalgebra_0-32']}
cxx = "1.0"

yaml-rust = "*"
parking_lot = "*"
num-traits = "*"
fern = {version = "*", features = ["colored"] }
array2d = "*"
lazy_static = "*"
env_logger = "*"
glob = "*"
serde = "*"
simba = "*"
log = "*"
derivative = "*"
error-chain = "*"
spin_sleep = "*"
flamer = "*"
mcap = "*"




