[package]
name = "darvis"
version = "0.1.0"
authors = ["Sofiya Semenova <sofiyase@buffalo.edu>", "Pranay Meshram <pranaywa@buffalo.edu>", "TJ Chase <tbchase@buffalo.edu>"]
edition = "2021"


[[bin]]
name = "bindarvis"
path = "src/main.rs"

[lib]
name = "core"
path = "src/core/lib.rs"

[profile.release]
debug = false
#codegen-units = 1
# lto = "fat"

[rust]
debuginfo-level = 1

[env]
IDL_PACKAGE_FILTER = { value = "std_msgs;r2r_minimal_node_msgs" }

[dependencies]
g2o = { path = "../g2o" }
dvos3binding = { path = "../orbslam-bindings" }
foxglove = { path = "../foxglove" }


once_cell = "*"
chrono = { version = "*", features = ["serde"] }
rand = "*"
linked-hash-map = "*"
ctrlc = "*"
downcast-rs = "*"
rustc-hash = "1.1.0"

## Visualizer
prost-types = "*"
prost = "*"
mcap = "*"
foxglove-ws = "0.2.2"
tokio = "1.36.0"
base64 = "0.21.7"

cc = { version = "1.0.79", features = ["parallel"] }
opencv = { version = "0.85.2", default-features = false, features = [
    "imgproc",
    "imgcodecs",
    "videoio",
    "highgui",
    "calib3d",
    "features2d",
    "objdetect",
    "flann",
    "photo",
    "stitching",
    "gapi",
    "alphamat",
    "aruco",
    "bgsegm",
    "ccalib",
    "face",
    "img_hash",
    "line_descriptor",
    "rapid",
    "rgbd",
    "stereo",
    "surface_matching",
    "tracking",
    "videostab",
    "xfeatures2d",
    "ximgproc",
    "xobjdetect",
    "xphoto",
 
] }

nalgebra = {version = "0.32.3", features = ["serde-serialize"]}
cv-convert = {version = '0.25.0', default-features = false, features = ['opencv_0-85','nalgebra_0-32']}
cxx = "1.0"

yaml-rust = "*"
parking_lot = {version = "*", features = ["deadlock_detection"]}
num-traits = "*"
array2d = "*"
lazy_static = "*"
glob = "*"
serde = "*"
simba = "*"
derivative = "*"
error-chain = "*"
spin_sleep = "*"
crossbeam-channel = "0.5.8"
nohash-hasher = "0.2.0"
#fasthash = "0.3"
ahash = "0.8.7"

fern = {version = "*", features = ["colored"] }
log = "*"
env_logger = "*"
logging_timer = "1.1.0"
tracy-client = {version = "0.16.0", features = ["enable"] }
tracy-client-sys = {version = "0.21.0"}
ordered-map = "0.4.2"

dynamize = "0.3.5"
csv = "1.3.0"
