[package]
name = "darvis"
version = "0.1.0"
authors = ["Sofiya Semenova <sofiyase@buffalo.edu>", "Pranay Meshram <pranaywa@buffalo.edu>", "TJ Chase <tbchase@buffalo.edu>"]
edition = "2021"


[[bin]]
name = "bindarvis"
path = "src/main.rs"

[lib]
name = "core"
path = "src/core/lib.rs"

[profile.release]
debug = true
#codegen-units = 1
lto = "fat"

[rust]
debuginfo-level = 2

#[env]
#IDL_PACKAGE_FILTER = { value = "std_msgs;r2r_minimal_node_msgs" }

[dependencies]
g2o = { path = "../g2o" }
dvos3binding = { path = "../orbslam-bindings" }
foxglove = { path = "../foxglove" }
gtsam = { path = "../gtsam-rs" }

once_cell = "1.19.0"
chrono = { version = "*", features = ["serde"] }
rand = "0.7.3"
linked-hash-map = "0.5.6"
ctrlc = "3.4.1"
downcast-rs = "1.2.0"
rustc-hash = "1.1.0"

## Visualizer
prost-types = "0.12.6"
prost = "0.12.6"
mcap = "0.9.2"
foxglove-ws = "0.2.2"
tokio = "1.36.0"
base64 = "0.21.7"

#cc = { version = "1.0.79", features = ["parallel"] }
opencv = {version = "0.85.3", default-features = false, features= ["imgcodecs", "video", "imgproc"]}
nalgebra = {version = "0.32.3"}
cv-convert = {version = '0.25.0', default-features = false, features = ['opencv_0-85','nalgebra_0-32']}
cxx = "1.0"

yaml-rust = "0.4.5"
parking_lot = {version = "*", features = ["deadlock_detection"]}
num-traits = "0.2.17"
array2d = "0.3.2"
lazy_static = "1.4.0"
glob = "0.3.1"
serde = "1.0.193"
simba = "0.7.3"
derivative = "2.2.0"
error-chain = "0.12.4"
spin_sleep = "1.1.1"
crossbeam-channel = "0.5.8"
nohash-hasher = "0.2.0"
#fasthash = "0.3"
ahash = "0.8.7"

fern = {version = "0.6.2", features = ["colored"] }
log = "0.4.20"
env_logger = "0.7.1"
logging_timer = "1.1.0"
tracy-client = {version = "0.16.0", default-features = false }
tracy-client-sys = {version = "0.21.0", default-features = false}
ordered-map = "0.4.2"

dynamize = "0.3.5"
csv = "1.3.0"
time = "0.3.37"
pdqselect = "0.1.1"
atomic_float = "1.1.0"