[package]
name = "foxglove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
prost-build = { version = "0.12.1" }

[dependencies]
mcap = "*"
serde_json = "*"
prost = "0.12.1"
bytes = "*"
prost-types = "0.12.1"
