[package]
name = "foxglove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
prost-build = { version = "0.12.1" }

[dependencies]
mcap = "0.9.0"
serde_json = "1.0.108"
prost = "0.12.1"
bytes = "1.5.0"
prost-types = "0.12.1"