[package]
name = "dvos3binding"
version = "0.1.0"
edition = "2021"

[lib]
name = "dvos3binding"
path = "src/lib.rs"
#crate_type = ["staticlib"]

[dependencies]
cxx = "1.0.108"
opencv = "0.84.5"

[build-dependencies]
cxx-build = "1.0.108"
cmake = "0.1.50"
cc = { version = "1.0.79", features = ["parallel"] }
