[package]
name = "dvos3binding"
version = "0.1.0"
edition = "2021"

[lib]
name = "dvos3binding"
path = "src/lib.rs"
#crate_type = ["staticlib"]

[dependencies]
cxx = "1.0.108"

opencv = { version = "0.85.2", default-features = false, features = [
    "clang-runtime",
    "imgproc",
    "imgcodecs",
    "videoio",
    "highgui",
    "calib3d",
    "features2d",
    "objdetect",
    "flann",
    "photo",
    "stitching",
    "gapi",
    "alphamat",
    "aruco",
    "bgsegm",
    "ccalib",
    "face",
    "img_hash",
    "line_descriptor",
    "rapid",
    "rgbd",
    "stereo",
    "surface_matching",
    "tracking",
    "videostab",
    "xfeatures2d",
    "ximgproc",
    "xobjdetect",
    "xphoto",
 
] }

[build-dependencies]
cxx-build = "1.0.108"
cmake = "0.1.50"
