[package]
name = "dvos3binding"
version = "0.1.0"
edition = "2021"

[lib]
name = "dvos3binding"
path = "src/lib.rs"
#crate_type = ["staticlib"]

[dependencies]
cxx = "1.0.108"
#opencv = {version = "0.85.2"}
opencv = { version = "0.85.2", default-features = false, features = [
    "features2d",
    "xfeatures2d",
 
] }
[build-dependencies]
cxx-build = "1.0.108"
cmake = "0.1.50"
